--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
         <script type="text/javascript" src="d3/d3.v3.js"></script>
     </head>
     <body>
+      <h1> oh hello </h1>
         <script type="text/javascript">
+
             // Your beautiful D3 code will go here
-            <h>oh hello </h>
+
         </script>
     </body>
 </html>
