--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <script type="text/javascript" src="d3/d3.v3.js"></script>
     </head>
     <body>
-      <h1> oh hello </h1>
+      
         <script type="text/javascript">
 
-            // Your beautiful D3 code will go here
+          d3.select("body").append("p").text("New paragraph!");
 
         </script>
     </body>
