added bar chart and sunburst chart

--- a/index.html
+++ b/index.html
@@ -5,23 +5,29 @@
         <title>D3 Test</title>
         <script type="text/javascript" src="d3/d3.v3.js"></script>
         <style type="text/css">
+      
         div.bar {
           display: inline-block;
           width: 20px;
-          height: 75px;   /* We'll override this later */
+          height: 75px;
           background-color: teal;
           margin-right: 2px;
 }
+
+
+
         </style>
     </head>
     <body>
         <script type="text/javascript">
-/*
+
+
+
+
         var dataset = [ 25, 7, 5, 26, 11, 8, 25, 14, 23, 19,
                         14, 11, 22, 29, 11, 13, 12, 17, 18, 10,
                         24, 18, 25, 9, 3 ];
 
-*/
 
 var dataset = [];                        //Initialize empty array
 for (var i = 0; i < 100; i++) {           //Loop 25 times
@@ -39,7 +45,8 @@ for (var i = 0; i < 100; i++) {           //Loop 25 times
       return barHeight + "px";
   });
 
-console.log(dataset);
+
+
 
 
 
