--- a/column/index.html
+++ b/column/index.html
@@ -67,7 +67,9 @@ var svg = d3.select("body").append("svg")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 // Fetch data via SODA from the Chicago data site
-d3.csv("https://data.cityofchicago.org/resource/w8km-9pzd.csv?$select=year,bus,paratransit,rail", function (error, data) {
+d3.csv("https://data.cityofchicago.org/resource/w8km-9pzd.csv?"
+  + "$select=year,bus,paratransit,rail"
+  + "&$where=year>1999", function (error, data) {
     // Make sure our numbers are really numbers
     data.forEach(function (d) {
         d.year = +d.year;
