--- a/column/index.html
+++ b/column/index.html
@@ -70,17 +70,16 @@ var svg = d3.select("body").append("svg")
 d3.csv("https://data.cityofnewyork.us/api/views/5c4s-jwtq/rows.csv?$select=month, total_snap_recipients", function (error, data) {
     // Make sure our numbers are really numbers
     data.forEach(function (d) {
-        d.year = +d.year;
-        d.bus = +d.bus;
-        d.paratransit = +d.paratransit;
-        d.rail = +d.rail;
+        d.month = +d.month;
+        d.total_snap_recipients = +d.total_snap_recipients;
+
     });
 
     console.log(data);
 
     // Use our values to set our color bands
     color.domain(d3.keys(data[0]).filter(function (key) {
-        return key !== "year";
+        return key !== "month";
     }));
 
     data.forEach(function (d) {
@@ -97,12 +96,12 @@ d3.csv("https://data.cityofnewyork.us/api/views/5c4s-jwtq/rows.csv?$select=month
 
     // Sort by year
     data.sort(function (a, b) {
-        return a.year - b.year;
+        return a.month - b.month;
     });
 
     // Our X domain is our set of years
     x.domain(data.map(function (d) {
-        return d.year;
+        return d.month;
     }));
 
     // Our Y domain is from zero to our highest total
@@ -125,15 +124,15 @@ d3.csv("https://data.cityofnewyork.us/api/views/5c4s-jwtq/rows.csv?$select=month
         .style("text-anchor", "end")
         .text("Ridership");
 
-    var year = svg.selectAll(".year")
+    var month = svg.selectAll(".month")
         .data(data)
         .enter().append("g")
         .attr("class", "g")
         .attr("transform", function (d) {
-        return "translate(" + x(d.year) + ",0)";
+        return "translate(" + x(d.month) + ",0)";
     });
 
-    year.selectAll("rect")
+    month.selectAll("rect")
         .data(function (d) {
         return d.types;
     })
