--- a/column/index.html
+++ b/column/index.html
@@ -66,8 +66,8 @@ var svg = d3.select("body").append("svg")
     .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-// Fetch data via SODA from the Chicago data site
-d3.csv("https://data.cityofnewyork.us/api/views/5c4s-jwtq/rows.csv?$select= Month, 'Total SNAP Recipients'", function (error, data) {
+// Fetch data via SODA from the NYC data site
+d3.csv("https://data.cityofnewyork.us/resource/5c4s-jwtq.csv", function (error, data) {
     // Make sure our numbers are really numbers
     data.forEach(function (d) {
         d.Month = +d.Month;
