--- a/column/index.html
+++ b/column/index.html
@@ -26,7 +26,7 @@
 <script src="http://d3js.org/d3.v3.min.js"></script>
 
 <script>
-// Set our margins
+/// Set our margins
 var margin = {
     top: 20,
     right: 20,
@@ -66,22 +66,21 @@ var svg = d3.select("body").append("svg")
     .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-// Fetch data via SODA from the NYC data site
-d3.csv("https://data.cityofnewyork.us/resource/5c4s-jwtq.csv", function (error, data) {
-
-		// Make sure our numbers are really numbers
-
-  /* data.forEach(function (d) {
-        d.Month = +d.Month;
-        d.'Total SNAP Recipients' = +d.'Total SNAP Recipients'; */
-
+// Fetch data via SODA from the Chicago data site
+d3.csv("https://data.cityofchicago.org/resource/w8km-9pzd.csv?$select=year,bus,paratransit,rail", function (error, data) {
+    // Make sure our numbers are really numbers
+    data.forEach(function (d) {
+        d.year = +d.year;
+        d.bus = +d.bus;
+        d.paratransit = +d.paratransit;
+        d.rail = +d.rail;
     });
 
     console.log(data);
 
     // Use our values to set our color bands
     color.domain(d3.keys(data[0]).filter(function (key) {
-        return key !== "Month";
+        return key !== "year";
     }));
 
     data.forEach(function (d) {
@@ -98,17 +97,17 @@ d3.csv("https://data.cityofnewyork.us/resource/5c4s-jwtq.csv", function (error, 
 
     // Sort by year
     data.sort(function (a, b) {
-        return a.Month - b.Month;
+        return a.year - b.year;
     });
 
     // Our X domain is our set of years
     x.domain(data.map(function (d) {
-        return d.Month;
+        return d.year;
     }));
 
     // Our Y domain is from zero to our highest total
     y.domain([0, d3.max(data, function (d) {
-        return d."Total SNAP Recipients";
+        return d.total;
     })]);
 
     svg.append("g")
@@ -126,15 +125,15 @@ d3.csv("https://data.cityofnewyork.us/resource/5c4s-jwtq.csv", function (error, 
         .style("text-anchor", "end")
         .text("Ridership");
 
-    var month = svg.selectAll(".month")
+    var year = svg.selectAll(".year")
         .data(data)
         .enter().append("g")
         .attr("class", "g")
         .attr("transform", function (d) {
-        return "translate(" + x(d.Month) + ",0)";
+        return "translate(" + x(d.year) + ",0)";
     });
 
-    Month.selectAll("rect")
+    year.selectAll("rect")
         .data(function (d) {
         return d.types;
     })
