--- a/column/index.html
+++ b/column/index.html
@@ -71,8 +71,8 @@ d3.csv("https://data.cityofnewyork.us/resource/8qru-nyj8.csv", function (error, 
     // Make sure our numbers are really numbers
     data.forEach(function (d) {
         d.Year = +d.Year;
-        d."Total Population" = +d."Total Population";
-        d."Foreign-Born Population" = +d."Foreign-Born Population";
+        d.total_population = +d.total_population;
+        d.foreign_born_population = +d.foreign_born_population;
 
     });
 
@@ -107,7 +107,7 @@ d3.csv("https://data.cityofnewyork.us/resource/8qru-nyj8.csv", function (error, 
 
     // Our Y domain is from zero to our highest total
     y.domain([0, d3.max(data, function (d) {
-        return d."Total Population";
+        return d.total_population;
     })]);
 
     svg.append("g")
@@ -130,7 +130,7 @@ d3.csv("https://data.cityofnewyork.us/resource/8qru-nyj8.csv", function (error, 
         .enter().append("g")
         .attr("class", "g")
         .attr("transform", function (d) {
-        return "translate(" + x(d.year) + ",0)";
+        return "translate(" + x(d.Year) + ",0)";
     });
 
     year.selectAll("rect")
