--- a/column/index.html
+++ b/column/index.html
@@ -70,7 +70,7 @@ var svg = d3.select("body").append("svg")
 d3.csv("https://data.cityofnewyork.us/resource/8qru-nyj8.csv", function (error, data) {
     // Make sure our numbers are really numbers
     data.forEach(function (d) {
-        d.year = +d.year;
+        d.Year = +d.Year;
         d.total_population = +d.total_population;
         d.foreign_born_population = +d.foreign_born_population;
 
@@ -80,7 +80,7 @@ d3.csv("https://data.cityofnewyork.us/resource/8qru-nyj8.csv", function (error, 
 
     // Use our values to set our color bands
     color.domain(d3.keys(data[0]).filter(function (key) {
-        return key !== "year";
+        return key !== "Year";
     }));
 
     data.forEach(function (d) {
@@ -97,12 +97,12 @@ d3.csv("https://data.cityofnewyork.us/resource/8qru-nyj8.csv", function (error, 
 
     // Sort by year
     data.sort(function (a, b) {
-        return a.year - b.year;
+        return a.Year - b.Year;
     });
 
     // Our X domain is our set of years
     x.domain(data.map(function (d) {
-        return d.year;
+        return d.Year;
     }));
 
     // Our Y domain is from zero to our highest total
@@ -125,12 +125,12 @@ d3.csv("https://data.cityofnewyork.us/resource/8qru-nyj8.csv", function (error, 
         .style("text-anchor", "end")
         .text("Ridership");
 
-    var year = svg.selectAll(".year")
+    var year = svg.selectAll(".Year")
         .data(data)
         .enter().append("g")
         .attr("class", "g")
         .attr("transform", function (d) {
-        return "translate(" + x(d.year) + ",0)";
+        return "translate(" + x(d.Year) + ",0)";
     });
 
     year.selectAll("rect")
