--- a/column/index.html
+++ b/column/index.html
@@ -69,12 +69,11 @@ var svg = d3.select("body").append("svg")
 // Fetch data via SODA from the Chicago data site
 d3.csv("https://data.cityofnewyork.us/resource/8qru-nyj8.csv", function (error, data) {
     // Make sure our numbers are really numbers
-    data.forEach(function (d) {
+/*    data.forEach(function (d) {
         d.Year = +d.Year;
         d."Total Population" = +d."Total Population";
         d."Foreign-Born Population" = +d."Foreign-Born Population";
-
-    });
+*/    });
 
     console.log(data);
 
