--- a/timeline/example/index.html
+++ b/timeline/example/index.html
@@ -67,7 +67,7 @@ var mySchedule = [{name:"Preliminary Budget", date: "2016-01-1"},
   {name:"Executive Budget & Hearings", date:	"2016-04-01"},
   {name:"Adopted Budget", date:	"2016-07-01"}
 ];
-TimeKnots.draw("#timeline2", mySchedule, {horizontalLayout: false, color: "#669", height: 600, width:200, showLabels: true, labelFormat:"%B"});
+TimeKnots.draw("#timeline2", mySchedule, {horizontalLayout: false, color: "#44a", height: 450, width:200, showLabels: true, labelFormat:"%B"});
 
 
 
