changed my schedule to span 3 from span 6

--- a/timeline/example/index.html
+++ b/timeline/example/index.html
@@ -24,6 +24,7 @@ body {
 </div>
 -->
 
+<!--Stanley Kubrick's movies -->
 <div class="fluid-row">
 <div class="span3">
 
@@ -33,8 +34,8 @@ body {
  <h2>Numeric, non date data</h2>
  <div id="timelineNonDate" style="width:200px;"></div>
 </div>
-<div class="span6">
 
+<div class="span3">
  <h2>My schedule</h2>
  <h5>Imaginary schedule in a vertical layout</h5>
  <div id="timeline2" style="width:200px;height: 450px;"></div>
