Separated graphs for ease of seeing

--- a/timeline/example/index.html
+++ b/timeline/example/index.html
@@ -15,14 +15,14 @@ body {
 </style>
 </head>
 <body>
-<!--
+
 <div class="fluid-row">
 <div class="well span11 pagination-centered">
 <h1>Demos using timeknots</h1>
 <h5><a href='https://github.com/alangrafu/timeknots'>https://github.com/alangrafu/timeknots</a></h5>
 </div>
 </div>
--->
+
 
 <!--Stanley Kubrick's movies -->
 <div class="fluid-row">
@@ -31,14 +31,23 @@ body {
 <h2>Stanley Kubrick's movies</h2>
  <h5>Part of Kubrick's Filmography form Wikipedia</h5>
  <div id="timeline1" style="width:500px;"></div>
+
+<!--NUMERIC, NON DATE DATA-->
+
  <h2>Numeric, non date data</h2>
  <div id="timelineNonDate" style="width:200px;"></div>
 </div>
+
+
+<!--My SCHEDULE -->
 
 <div class="span3">
  <h2>My schedule</h2>
  <h5>Imaginary schedule in a vertical layout</h5>
  <div id="timeline2" style="width:200px;height: 450px;"></div>
+
+   <!--THIS WEEKS AGENDA`-->
+
  <h2>This week's agenda</h2>
  <h5>Shows random meetings/free days</h5>
  <div id="timeline3" style="width:500px;height: 200px;"></div>
