changed date format

--- a/timeline/example/index.html
+++ b/timeline/example/index.html
@@ -24,7 +24,7 @@ body {
 </div>
 
 
-<!--Stanley Kubrick's movies -->
+<!--STANELY CUBRICS MOVIE TIMELINE -->
 <div class="fluid-row">
 <div class="span3">
 
