removed year from label

--- a/timeline/example/index.html
+++ b/timeline/example/index.html
@@ -97,7 +97,7 @@ var mySchedule = [{name:"Preliminary Budget", date: "2016-01-1"},
 
 // TIMELINE 2 DRAW - MY SCHEDULE
 
-TimeKnots.draw("#timeline2", mySchedule, {dateFormat: "%B %Y", horizontalLayout: false, radius: 20, color: "#44a", height: 450, width:300, showLabels: true, labelFormat:"%B %Y"});
+TimeKnots.draw("#timeline2", mySchedule, {dateFormat: "%B %Y", horizontalLayout: false, radius: 20, color: "#44a", height: 450, width:300, showLabels: true, labelFormat:"%B"});
 
 // GENERATE RANDOM MEETING/FREE DAYS VARIABLE
 
