--- a/timeline/example/index.html
+++ b/timeline/example/index.html
@@ -88,11 +88,11 @@ TimeKnots.draw("#timeline1", kurbickFilms, {dateFormat: "%B %Y", color: "#696", 
 
 // MY SCHEDULE VARIABLE
 
-var mySchedule = [{name:"Preliminary Budget", date: "2016-01-01"},
-  {name:"Council Analysis & Hearings", 	date:"2016-02-02"},
-  {name:"Formal Response", 	date:"2016-03-02"},
-  {name:"Executive Budget & Hearings", date:	"2016-04-02"},
-  {name:"Adopted Budget", date:	"2016-07-01"}
+var mySchedule = [{name:"Preliminary Budget", date: "2016-01"},
+  {name:"Council Analysis & Hearings", 	date:"2016-02"},
+  {name:"Formal Response", 	date:"2016-03"},
+  {name:"Executive Budget & Hearings", date:	"2016-04"},
+  {name:"Adopted Budget", date:	"2016-07"}
 ];
 
 // TIMELINE 2 DRAW - MY SCHEDULE
