--- a/timeline2/index.html
+++ b/timeline2/index.html
@@ -28,7 +28,7 @@ var margin = {top: 100, right: 100, bottom: 100, left: 100},
 
 var x = d3.time.scale()
     .domain([startDate, endDate])
-    .nice(d3.time.month)
+    .nice(d3.time.day)
     .range([height, 0]);
 
 var svg = d3.select("body").append("svg")
