--- a/timeline2/index.html
+++ b/timeline2/index.html
@@ -26,11 +26,11 @@ var margin = {top: 100, right: 100, bottom: 100, left: 100},
     width = 960 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
-/* var x = d3.time.scale()
+var x = d3.time.scale()
     .domain([startDate, endDate])
     .nice(d3.time.month)
     .range([height, 0]);
-    */
+    
 
 var svg = d3.select("body").append("svg")
     .attr("width", width + margin.left + margin.right)
