--- a/scale/index.html
+++ b/scale/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>D3 Demo: Linear scales</title>
-		<script type="text/javascript" src="../d3/d3.v3.min.js"></script>
+		<script type="text/javascript" src="../d3/d3.v3.js"></script>
 		<style type="text/css">
 			/* No style rules here yet */
 		</style>
