--- a/scale/index.html
+++ b/scale/index.html
@@ -22,10 +22,12 @@
 						  ];
 
 			//Create scale functions
-			var xScale = d3.scale.linear()
+// X scale
+/*
+    	var xScale = d3.scale.linear()
 								 .domain([0, d3.max(dataset, function(d) { return d[0]; })])
 								 .range([0, w]);
-
+*/
 			var yScale = d3.scale.linear()
 								 .domain([0, d3.max(dataset, function(d) { return d[1]; })])
 								 .range([0, h]);
