--- a/scale/index.html
+++ b/scale/index.html
@@ -23,14 +23,17 @@
 
 			//Create scale functions
 // X scale
-/*
+
     	var xScale = d3.scale.linear()
 								 .domain([0, d3.max(dataset, function(d) { return d[0]; })])
 								 .range([0, w]);
-*/
+// Y scale
+
+/*
 			var yScale = d3.scale.linear()
 								 .domain([0, d3.max(dataset, function(d) { return d[1]; })])
 								 .range([0, h]);
+*/
 
 			//Create SVG element
 			var svg = d3.select("body")
