added x axis back

--- a/scale/index.html
+++ b/scale/index.html
@@ -44,9 +44,9 @@
 			   .data(dataset)
 			   .enter()
 			   .append("circle")
-			  /* .attr("cx", function(d) {
+			   .attr("cx", function(d) {
 			   		return xScale(d[0]);
-        */
+      
 			   })
 			   .attr("cy", function(d) {
 			   		return yScale(d[1]);
