--- a/scale/index.html
+++ b/scale/index.html
@@ -17,6 +17,7 @@
     var margin = {top: 100, right: 100, bottom: 100, left: 100},
         width = 960 - margin.left - margin.right,
         height = 500 - margin.top - margin.bottom;
+
 //Width and height
 			var w = 600;
 			var h = 400;
@@ -75,7 +76,18 @@
 			   })
 			   .attr("font-family", "sans-serif")
 			   .attr("font-size", "11px")
-			   .attr("fill", "red");
+			   .attr("fill", "blue");
+
+//add margin
+         var svg = d3.select("body").append("svg")
+             .attr("width", width + margin.left + margin.right)
+             .attr("height", height + margin.top + margin.bottom)
+           .append("g")
+             .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+         svg.append("g")
+             .attr("class", "x axis")
+             .call(d3.svg.axis().scale(x).orient("left"));
 
 		</script>
 	</body>
