--- a/scale/index.html
+++ b/scale/index.html
@@ -70,8 +70,8 @@
 			   		return yScale(d[1]);
 			   })
 			   .attr("font-family", "sans-serif")
-			   .attr("font-size", "11px")
-			   .attr("fill", "blue");
+			   .attr("font-size", "17px")
+			   .attr("fill", "teal");
 
 
 
