--- a/axis/index.html
+++ b/axis/index.html
@@ -31,7 +31,7 @@ body {
 <script>
 
 var format = d3.time.format("%Y-%m-%d");
-var startDate = format.parse("2015-12-31");
+var startDate = format.parse("2016-01-01");
 var endDate = format.parse("2016-06-01");
 
 var margin = {top: 100, right: 100, bottom: 100, left: 100},
@@ -40,7 +40,7 @@ var margin = {top: 100, right: 100, bottom: 100, left: 100},
 
 var x = d3.time.scale()
     .domain([startDate, endDate])
-    .nice(d3.time.month)
+    //.nice(d3.time.month)
     .range([height, 0]);
 
 
