changed nice to count

--- a/axis/index.html
+++ b/axis/index.html
@@ -40,9 +40,10 @@ var margin = {top: 100, right: 100, bottom: 100, left: 100},
 
 var x = d3.time.scale()
     .domain([startDate, endDate])
-    .nice(d3.time.month)
+    .nice([6])
     .range([height, 0]);
 
+//d3.time.month
 
 var svg = d3.select("body").append("svg")
     .attr("width", width + margin.left + margin.right)
