--- a/axis/index.html
+++ b/axis/index.html
@@ -40,7 +40,7 @@ var margin = {top: 100, right: 100, bottom: 100, left: 100},
 
 var x = d3.time.scale()
     .domain([startDate, endDate])
-    .nice([6])
+    .nice([])
     .range([height, 0]);
 
 //d3.time.month
