--- a/axis/index.html
+++ b/axis/index.html
@@ -61,4 +61,12 @@ svg.append("g")
     .attr("class", "x axis")
     .call(d3.svg.axis().scale(x).orient("left"));
 
+svg.append("text")
+        .attr("class", "y label")
+        .attr("text-anchor", "end")
+        .attr("y", 6)
+        .attr("dy", ".75em")
+        .attr("transform", "rotate(-90)")
+        .text("life expectancy (years)");
+
 </script>
