--- a/axis/index.html
+++ b/axis/index.html
@@ -61,6 +61,8 @@ svg.append("g")
     .attr("class", "x axis")
     .call(d3.svg.axis().scale(x).orient("left"));
 
+//add Vertical Text
+/*
 svg.append("text")
         .attr("class", "y label")
         .attr("text-anchor", "end")
@@ -68,5 +70,6 @@ svg.append("text")
         .attr("dy", ".75em")
         .attr("transform", "rotate(-90)")
         .text("life expectancy (years)");
+*/
 
 </script>
