--- a/axis/index.html
+++ b/axis/index.html
@@ -38,33 +38,41 @@ var dataset = [{name:"Preliminary Budget", date: "2016-01-05"},
 
 ];
 
+/*
 var axis = d3.svg.axis()
     .scale(x)
     .ticks(10)
     .orient("left");
-
-var format = d3.time.format("%Y-%m-%d");
-var startDate = format.parse("2016-01-12");
-var endDate = format.parse("2016-06-01");
+*/
 
 
+var format = d3.time.format("%Y-%m-%d"); //Constructs a new local time formatter using the given specifier.
+var startDate = format.parse("2016-01-12");  // returns the startDate Date
+var endDate = format.parse("2016-06-01"); // returns the endDate Date
 
+
+
+// sets margin
 
 var margin = {top: 100, right: 100, bottom: 100, left: 100},
     width = 960 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
+//sets scale with Domain and Range
+
 var x = d3.time.scale()
-    .domain([startDate, endDate])
-  //  .nice([d3.time.month])
-    .range([height, 0]);
+    .domain([startDate, endDate]) // values to consider - start to end dates variables
+    .nice([d3.time.month]) // rounds data to nearest month
+    .range([height, 0]); // scales dates to height of graph to 0
 
 
-var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+// creates the SVG
+
+var svg = d3.select("body").append("svg") // creates a variable svg and adds an svg element to the body of the page
+    .attr("width", width + margin.left + margin.right) // sets width of svg
+    .attr("height", height + margin.top + margin.bottom) // sets height of svg
+  .append("g") // adds a ‘g’ element - a container element for grouping together related graphics elements
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")"); // telling SVG Group Element that we want to move it and everything inside margins of it
 
 
 
