--- a/linechart2/index.html
+++ b/linechart2/index.html
@@ -100,7 +100,7 @@ d3.tsv("data.tsv", function(error, data) {
       .attr("y", 6)
       .attr("dy", ".71em")
       .style("text-anchor", "end")
-      .text("Price ($)");
+      .text("Number of Violent Incidences");
 
   svg.append("path")
       .datum(data)
