--- a/linechart2/index.html
+++ b/linechart2/index.html
@@ -45,7 +45,7 @@ var margin = {top: 20, right: 50, bottom: 30, left: 50},
 
 var parseDate = d3.time.format("%d-%b-%y").parse,
     bisectDate = d3.bisector(function(d) { return d.date; }).left,
-    formatValue = d3.format(",.2f"),
+    formatValue = d3.format(","),
     formatCurrency = function(d) { return formatValue(d); };
 
 var x = d3.time.scale()
