--- a/linechart2/index.html
+++ b/linechart2/index.html
@@ -47,8 +47,8 @@ var parseDate = d3.time.format("%d-%b-%y").parse,
     bisectDate = d3.bisector(function(d) { return d.date; }).left,
     formatValue = d3.format(","),
     formatCurrency = function(d) { return formatValue(d); };
-
 var x = d3.time.scale()
+	.nice(d3.time.year)
     .range([0, width]);
 
 var y = d3.scale.linear()
