--- a/linechart2/index.html
+++ b/linechart2/index.html
@@ -11,7 +11,8 @@ body {
 .axis line {
   fill: none;
   stroke: #000;
-  shape-rendering: auto;
+  stroke-width: 3px;
+  shape-rendering: crispEdges;
 }
 
 .x.axis path {
@@ -56,7 +57,7 @@ var y = d3.scale.linear()
 
 var xAxis = d3.svg.axis()
     .scale(x)
-	.ticks(10)
+	.ticks(7)
     .orient("bottom");
 
 var yAxis = d3.svg.axis()
