--- a/linechart2/index.html
+++ b/linechart2/index.html
@@ -49,6 +49,7 @@ var parseDate = d3.time.format("%d-%b-%y").parse,
     formatCurrency = function(d) { return formatValue(d); };
 	
 var x = d3.time.scale()
+	.nice(d3.time.month)
     .range([0, width]);
 
 var y = d3.scale.linear()
@@ -56,7 +57,7 @@ var y = d3.scale.linear()
 
 var xAxis = d3.svg.axis()
     .scale(x)
-	.ticks(10)
+	//.ticks(10)
     .orient("bottom");
 
 var yAxis = d3.svg.axis()
