--- a/linechart2/index.html
+++ b/linechart2/index.html
@@ -40,7 +40,7 @@ body {
 <script>
 
 var margin = {top: 20, right: 50, bottom: 30, left: 50},
-    width = 600 - margin.left - margin.right,
+    width = 700 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
 var parseDate = d3.time.format("%d-%b-%y").parse,
@@ -49,7 +49,7 @@ var parseDate = d3.time.format("%d-%b-%y").parse,
     formatCurrency = function(d) { return formatValue(d); };
 	
 var x = d3.time.scale()
-	.nice(d3.time.year)
+	//.nice(d3.time.year)
     .range([0, width]);
 
 var y = d3.scale.linear()
