--- a/partition/index.html
+++ b/partition/index.html
@@ -4,7 +4,8 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <link type="text/css" rel="stylesheet" href="style.css"/>
-  <script src="//d3js.org/d3.v3.js"></script>
+    <script type="text/javascript" src="d3/d3.js"></script>
+    <script type="text/javascript" src="d3/d3.layout.js"></script>
     <style type="text/css">
 
 .chart {
