--- a/linechart3/multi-line-full.html
+++ b/linechart3/multi-line-full.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--http://www.delimited.io/blog/2014/3/3/creating-multi-series-charts-in-d3-lines-bars-area-and-streamgraphs-->
-
+<!-- GITHUB https://github.com/sghall/d3-multi-series-charts -->
   <head>
     <meta charset="utf-8">
     <link href="css/bootstrap.css" rel="stylesheet">
